--- a/package.json
+++ b/package.json
@@ -1,56 +1,24 @@
 {
   "name": "pyload-js",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "nodejs wrapper for pyload api",
-  "main": "dist/lib/index.js",
-  "types": "dist/lib/types/index.d.ts",
+  "type": "module",
+  "main": "lib/index.cjs",
+  "module": "lib/index.js",
+  "types": "lib/index.d.ts",
   "files": [
-    "dist/lib/**/*"
+    "dist/**/*"
   ],
   "scripts": {
     "version": "npm run format && git add -A src",
-    "start": "npm run build && nodemon dist/lib/index.js",
+    "start": "npm run build && nodemon dist/index.js",
     "prepare": "npm run build",
     "preversion": "npm run lint",
     "postversion": "git push && git push --tags",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "echo \"add linting\"",
-    "build": "rimraf dist && tsc",
-    "test": "jest --coverage",
-    "test:watch": "jest --coverage --watch",
-    "test:prod": "npm run lint && npm run test -- --no-cache"
-  },
-  "jest": {
-    "setupFiles": [
-      "dotenv/config"
-    ],
-    "transform": {
-      ".(ts|tsx)": "ts-jest"
-    },
-    "testEnvironment": "node",
-    "testMatch": [
-      "<rootDir>/src/**/*.test.ts"
-    ],
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "/test/"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 90,
-        "functions": 95,
-        "lines": 95,
-        "statements": 95
-      }
-    },
-    "collectCoverageFrom": [
-      "src/*.{js,ts}"
-    ]
+    "build": "tsup src/index.ts",
+    "test": "vitest"
   },
   "author": "Matthias Klan <matthias.klan@gmail.com>",
   "repository": {
@@ -66,17 +34,12 @@
     "axios": "^0.19.2"
   },
   "devDependencies": {
-    "@types/jest": "^25.1.4",
+    "@types/node": "^20.10.4",
     "dotenv": "^8.2.0",
-    "jest": "^25.1.0",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^25.2.1",
-    "ts-node": "^8.7.0",
-    "tslint": "^6.1.0",
-    "tslint-config-airbnb": "^5.11.2",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.8.3"
+    "tsup": "^8.0.1",
+    "typescript": "^5.3.3",
+    "vitest": "^1.0.4"
   }
 }
